syntax = "proto3";

package notifier;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "PWZ1.0/pkg/pwz";

//было для тестов
message MessageRequest {
  string text = 1 [(validate.rules).string = {min_len: 1, max_len: 200}];
  Priority priority = 2 [(validate.rules).enum = {defined_only: true}];
  google.protobuf.Duration delay = 3;
  repeated string tags = 4 [(validate.rules).repeated = {max_items: 10}];
  optional string comment = 5;
  string title = 6 [(validate.rules).string = {max_len: 50}];
}

message MessageResponse {
  uint32 id = 1;
}

enum Priority {
  PRIORITY_UNKNOWN = 0;
  PRIORITY_MIN = 1;
  PRIORITY_LOW = 2;
  PRIORITY_DEFAULT = 3;
  PRIORITY_HIGH = 4;
  PRIORITY_MAX = 5;
}

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Пункт выдачи заказов";
    version: "1.0.0";
    description: "HTTP и gRPC";
  };
  host: "localhost:50052";
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
};


service Notifier {
  //было для тестов
  rpc SendMessage(MessageRequest) returns (MessageResponse) {
    option(google.api.http) = {
      post: "/SendMessage",
      body: "*",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "";
      description: "Описание...";
    };
  };

  // Принять заказ от курьера
  rpc AcceptOrder(AcceptOrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      post: "/accept_order"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Принять заказ от курьера";
      description: "Описание...";
    };
  }
  // Вернуть заказ курьеру
  rpc ReturnOrder(OrderIdRequest) returns (OrderResponse) {
    option (google.api.http) = {
      post: "/return_order"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Вернуть заказ курьеру";
      description: "Описание...";
    };
  }
  // Выдать заказы или принять возврат клиента
  rpc ProcessOrders(ProcessOrdersRequest) returns (ProcessResult) {
    option (google.api.http) = {
      post: "/process_orders"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Выдать заказы или принять возврат клиента";
      description: "Описание...";
    };
  }
  // Получить список заказов
  rpc ListOrders(ListOrdersRequest) returns (OrdersList) {
    option(google.api.http) = {
      post: "/list_orders"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Получить список заказов";
      description: "Описание...";
    };
  };
// Получить список возвратов
  rpc ListReturns(ListReturnsRequest) returns (ReturnsList) {
    option (google.api.http) = {
      post: "/list_returns"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Получить список возвратов";
      description: "Описание...";
    };
  }
  // Получить историю изменения заказов
  rpc GetHistory(GetHistoryRequest) returns (OrderHistoryList) {
    option (google.api.http) = {
      post: "/get_history"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Получить историю изменения заказов";
      description: "Описание...";
    };
  }
  // Импорт заказов (если эта ручка делалась ранее в рамках доп заданий)
  rpc ImportOrders(ImportOrdersRequest) returns (ImportResult) {
    option (google.api.http) = {
      post: "/import_orders"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Импорт заказов (если эта ручка делалась ранее в рамках доп заданий)";
      description: "Описание...";
    };
  }
//TODO:новая ручка
  rpc GetOrderHistory(OrderHistoryRequest) returns (OrderHistoryResponse) {
    option (google.api.http) = {
      get: "/order/{order_id}/history"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Получить историю по заказу";
      description: "Описание...";
    };
  }
}
//TODO:новые сообщения
message OrderHistoryRequest {
  uint64 order_id = 1;
}

message OrderHistoryResponse {
  repeated OrderHistory history = 1;
}

message AcceptOrderRequest {
  uint64 order_id = 1;
  uint64 user_id = 2;
  google.protobuf.Timestamp expires_at = 3;
  optional PackageType package = 4;
  float weight = 5 [(validate.rules).float = {gt: 0}];
  float price = 6 [(validate.rules).float = {gte: 0}];
}

message OrderIdRequest {
  uint64 order_id = 1;
}

message ProcessOrdersRequest {
  uint64 user_id = 1;
  ActionType action = 2;
  repeated uint64 order_ids = 3;
}

enum ActionType {
  // не указан
  ACTION_TYPE_UNSPECIFIED = 0;
  // выдать заказы
  ACTION_TYPE_ISSUE = 1;
  // принять возврат клиента
  ACTION_TYPE_RETURN = 2;
}

message ListOrdersRequest {
  uint64 user_id = 1;
  bool in_pvz = 2; // если true, то будут заказы для выдачи клиенту, если false, то все
  optional uint32 last_n = 3;
  optional Pagination pagination = 4;
}

message Pagination {
  uint32 page = 1 [(validate.rules).uint32 = {gte: 0}];
  uint32 count_on_page = 2 [(validate.rules).uint32 = {gte: 0, lte: 100}];
}

message ListReturnsRequest {
  Pagination pagination = 1;
}

message ImportOrdersRequest {
  repeated AcceptOrderRequest orders = 1 [(validate.rules).repeated = {min_items: 1}];
}

message GetHistoryRequest {
  Pagination pagination = 1;
}

message OrderResponse {
  OrderStatus status = 1;
  uint64 order_id = 2;
}

message ProcessResult {
  repeated uint64 processed = 1;
  repeated uint64 errors = 2;
}

message OrdersList {
  repeated Order orders = 1;
  int32 total = 2 [(validate.rules).int32 = {gte: 0}];
}

message ReturnsList {
  repeated Order returns = 1;
}

message OrderHistoryList {
  repeated OrderHistory history = 1;
}

message ImportResult {
  int32 imported = 1 [(validate.rules).int32 = {gte: 0}];
  repeated uint64 errors = 2;
}

message Order {
  uint64 order_id = 1;
  uint64 user_id = 2;
  OrderStatus status = 3;
  google.protobuf.Timestamp expires_at = 4;
  float weight = 5 [(validate.rules).float = {gt: 0}];
  float total_price = 6 [(validate.rules).float = {gte: 0}];
  optional PackageType package = 7;
}

enum PackageType {
  // не указан
  PACKAGE_TYPE_UNSPECIFIED = 0;
  // пакет
  PACKAGE_TYPE_BAG = 1;
  // коробка
  PACKAGE_TYPE_BOX = 2;
  // пленка
  PACKAGE_TYPE_TAPE = 3;
  // пленка + пакет
  PACKAGE_TYPE_BAG_TAPE = 4;
  // пленка + коробка
  PACKAGE_TYPE_BOX_TAPE = 5;
}

enum OrderStatus {
  // не указан
  ORDER_STATUS_UNSPECIFIED = 0;
  // получен, ожидает выдачи клиенту
  ORDER_STATUS_EXPECTS = 1;
  // выдан клиенту
  ORDER_STATUS_ACCEPTED = 2;
  // возвращен клиентом в пвз
  ORDER_STATUS_RETURNED = 3;
  // возвращен курьеру из пвз
  ORDER_STATUS_DELETED = 4;
}

message OrderHistory {
  uint64 order_id = 1;
  OrderStatus status = 2;
  google.protobuf.Timestamp created_at = 3;
}


